--- a/Aptitude-test/career.ipynb
+++ b/Aptitude-test/career.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4              75             85       lively  Marketing Specialist  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "4"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "4              75             85            2              34  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_labels = df['Career Outcome'].unique()\n",
+    "encoded = labelencoder.fit_transform(y_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_data = np.stack([y_labels,encoded],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['Software Developer', 46],\n",
+       "       ['Data Scientist', 14],\n",
+       "       ['UX Designer', 52],\n",
+       "       ['Financial Analyst', 20],\n",
+       "       ['Marketing Specialist', 34],\n",
+       "       ['Human Resources Manager', 26],\n",
+       "       ['Product Manager', 41],\n",
+       "       ['Data Engineer', 13],\n",
+       "       ['Financial Planner', 21],\n",
+       "       ['Administrative Assistant', 0],\n",
+       "       ['Marketing Manager', 33],\n",
+       "       ['Research Scientist', 45],\n",
+       "       ['Graphic Designer', 23],\n",
+       "       ['Civil Engineer', 10],\n",
+       "       ['Nurse Practitioner', 36],\n",
+       "       ['Physical Therapist', 38],\n",
+       "       ['Chef', 7],\n",
+       "       ['Pharmacist', 37],\n",
+       "       ['Interior Designer', 27],\n",
+       "       ['Environmental Scientist', 17],\n",
+       "       ['Psychologist', 42],\n",
+       "       ['Electrician', 16],\n",
+       "       ['Aerospace Engineer', 1],\n",
+       "       ['Fashion Designer', 19],\n",
+       "       ['Veterinarian', 53],\n",
+       "       ['Investment Banker', 29],\n",
+       "       ['Public Relations Specialist', 44],\n",
+       "       ['Biomedical Engineer', 6],\n",
+       "       ['Dental Hygienist', 15],\n",
+       "       ['Event Planner', 18],\n",
+       "       ['Chemical Engineer', 8],\n",
+       "       ['Journalist', 30],\n",
+       "       ['Architect', 2],\n",
+       "       ['Art Director', 3],\n",
+       "       ['Technical Writer', 51],\n",
+       "       ['Chemist', 9],\n",
+       "       ['HR Consultant', 24],\n",
+       "       ['Logistician', 31],\n",
+       "       ['Market Research Analyst', 32],\n",
+       "       ['Physician Assistant', 39],\n",
+       "       ['Web Developer', 54],\n",
+       "       ['Data Analyst', 12],\n",
+       "       ['Technical Support Specialist', 50],\n",
+       "       ['Medical Illustrator', 35],\n",
+       "       ['Healthcare Administrator', 25],\n",
+       "       ['Supply Chain Manager', 49],\n",
+       "       ['Biologist', 5],\n",
+       "       ['Artificial Intelligence Engineer', 4],\n",
+       "       ['Public Health Analyst', 43],\n",
+       "       ['Statistician', 48],\n",
+       "       ['Software Tester', 47],\n",
+       "       ['Clinical Psychologist', 11],\n",
+       "       ['Political Analyst', 40],\n",
+       "       ['Forensic Scientist', 22],\n",
+       "       ['Investment Analyst', 28]], dtype=object)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +612,7 @@
        "4         Artificial Intelligence Engineer"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +650,7 @@
        "       11, 40, 22, 28])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,14 +674,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy score with Decision Tree 3.7037037037037033\n"
+      "Model accuracy score with Decision Tree 7.4074074074074066\n"
      ]
     }
    ],
@@ -603,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +705,7 @@
        "\"\\n#Xgboost model\\nmodel = XGBClassifier()\\nmodel.fit(X_train,y_train)\\ny_pred = model.predict(X_test)\\naccuracy = accuracy_score(y_test, y_pred)\\nprint('Model accuracy score with Decision Tree', accuracy*100)\\n\""
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
